Document PPDG/src/objects/System_Checks__c.object
<CustomObject>
    <fields>
        <fullName>Domain_Admin_Group_Check_Final_RAG__c</fullName>
        <label>Domain Admin Group Check Final RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Domain_Admin_Group_Check_Initial_RAG__c</fullName>
        <label>Domain Admin Group Check Initial RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Domain_Admin_Group_Check_Priority__c</fullName>
        <label>Domain Admin Group Check Priority</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain_Management_Check_Comments__c</fullName>
        <label>Domain Management Check Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Domain_Management_Check_Comp_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Domain Management Check Comp By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_CheckspxCK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Domain_Management_Check_Comp_Date__c</fullName>
        <label>Domain Management Check Comp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Domain_Management_Check_Final_RAG__c</fullName>
        <label>Domain Management Check Final RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Domain_Management_Check_Initial_RAG__c</fullName>
        <label>Domain Management Check Initial RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Domain_Management_Check_Priority__c</fullName>
        <label>Domain Management Check Priority</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exchange_Webmail_Security_Comments__c</fullName>
        <label>Exchange Webmail Security Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Exchange_Webmail_Security_Comp_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Exchange Webmail Security Comp By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_CheckspxBM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exchange_Webmail_Security_Comp_Date__c</fullName>
        <label>Exchange Webmail Security Comp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exchange_Webmail_Security_Final_RAG__c</fullName>
        <label>Exchange Webmail Security Final RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Exchange_Webmail_Security_Initial_RAG__c</fullName>
        <label>Exchange Webmail Security Initial RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Exchange_Webmail_Security_Priority__c</fullName>
        <label>Exchange Webmail Security Priority</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_CAA_check_comments__c</fullName>
        <label>External CAA check comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>External_CAA_check_comp_date__c</fullName>
        <label>External CAA check comp date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_user_opps_check_comments__c</fullName>
        <label>External user records check comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>External_user_opps_check_comp_date__c</fullName>
        <label>External user records check comp date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_user_records_final_RAG__c</fullName>
        <label>External user records final RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_user_records_initial_RAG__c</fullName>
        <label>External user records initial RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>File_Server_Access_Check_Comments__c</fullName>
        <label>File Server Access Check Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>File_Server_Access_Check_Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>File Server Access Check Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_Checks5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>File_Server_Access_Check_Completed_Date__c</fullName>
        <label>File Server Access Check Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>File_Server_Access_Check_Final_RAG__c</fullName>
        <label>File Server Access Check Final RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>File_Server_Access_Check_Initial_RAG__c</fullName>
        <label>File Server Access Check Initial RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>File_Server_Access_Check_Priority__c</fullName>
        <label>File Server Access Check Priority</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Firewall_rules_Internet_Bank_Comments__c</fullName>
        <label>Firewall rules Internet Bank Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Firewall_rules_Internet_Bank_Comp_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Firewall rules Internet Bank Comp By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_CheckspxBC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Firewall_rules_Internet_Bank_Comp_Date__c</fullName>
        <label>Firewall rules Internet Bank Comp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Firewall_rules_Internet_Bank_Final_RAG__c</fullName>
        <label>Firewall rules Internet Bank Final RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Firewall_rules_Internet_Bank_Initial_RAG__c</fullName>
        <label>Firewall rules Internet Bank Initial RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Firewall_rules_Internet_Bank_Priority__c</fullName>
        <label>Firewall rules Internet Bank Priority</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fortnight__c</fullName>
        <label>Fortnight</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HO_CCTV_Cameras_System_Check_Comments__c</fullName>
        <label>HO CCTV Cameras/System Check Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>HO_CCTV_Cameras_System_Check_Comp_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HO CCTV Cameras/System Check Comp By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_CheckspwoD</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HO_CCTV_Cameras_System_Check_Comp_Date__c</fullName>
        <label>HO CCTV Cameras/System Check Comp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HO_CCTV_Cameras_System_Check_Final_RAG__c</fullName>
        <label>HO CCTV Cameras/System Check Final RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HO_CCTV_Cameras_System_Check_Initial_RAG__c</fullName>
        <label>HO CCTV Cameras/System Check Initial RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HO_CCTV_Cameras_System_Check_Priority__c</fullName>
        <label>HO CCTV Cameras/System Check Priority</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IBB_SSL_Certificate_Check_Comments__c</fullName>
        <label>Al Rayan Bank SSL Cert Check Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IBB_SSL_Certificate_Check_Comp_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Al Rayan Bank SSL Cert Check Comp By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_CheckspxCA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IBB_SSL_Certificate_Check_Comp_Date__c</fullName>
        <label>Al Rayan Bank SSL Cert Check Comp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IBB_SSL_Certificate_Check_Final_RAG__c</fullName>
        <label>Al Rayan Bank SSL Cert Check Final RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IBB_SSL_Certificate_Check_Initial_RAG__c</fullName>
        <label>Al Rayan Bank SSL Cert Check Initial RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IBB_SSL_Certificate_Check_Priority__c</fullName>
        <label>Al Rayan Bank SSL Cert Check Priority</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IFM_Check_IIS_SSL_Certificate_Comments__c</fullName>
        <label>IFM Check IIS SSL Certificate Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IFM_Check_IIS_SSL_Certificate_Comp_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IFM Check IIS SSL Certificate Comp By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_CheckspxBl</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IFM_Check_IIS_SSL_Certificate_Comp_Date__c</fullName>
        <label>IFM Check IIS SSL Certificate Comp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IFM_Check_IIS_SSL_Certificate_Final_RAG__c</fullName>
        <label>IFM Check IIS SSL Certificate Final RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IFM_Check_IIS_SSL_Certificate_Initial_RA__c</fullName>
        <label>IFM Check IIS SSLCertificate Initial RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IFM_Check_IIS_SSL_Certificate_Priority__c</fullName>
        <label>IFM Check IIS SSL Certificate Priority</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IFM_Domain_Monitoring_Check_Comments__c</fullName>
        <label>IFM Domain Monitoring &amp; Check Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IFM_Domain_Monitoring_Check_Comp_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IFM Domain Monitoring &amp; Check Comp By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_Checkspx7j</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IFM_Domain_Monitoring_Check_Comp_Date__c</fullName>
        <label>IFM Domain Monitoring &amp; Check Comp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IFM_Domain_Monitoring_Check_Final_RAG__c</fullName>
        <label>IFM Domain Monitoring &amp; Check Final RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IFM_Domain_Monitoring_Check_Initial_RA__c</fullName>
        <label>IFM Domain Monitoring Check Initial RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IFM_Domain_Monitoring_Check_Priority__c</fullName>
        <label>IFM Domain Monitoring &amp; Check Priority</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IFM_Servers_Kaspersky_Update_Comments__c</fullName>
        <label>IFM Servers - Kaspersky Update Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IFM_Servers_Kaspersky_Update_Comp_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IFM Servers - Kaspersky Update Comp By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_Checkspx0s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IFM_Servers_Kaspersky_Update_Comp_Date__c</fullName>
        <label>IFM Servers - Kaspersky Update Comp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IFM_Servers_Kaspersky_Update_Final_RAG__c</fullName>
        <label>IFM Servers - Kaspersky Update Final RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IFM_Servers_Kaspersky_Update_Initial_R__c</fullName>
        <label>IFM Servers Kaspersky Update Initial RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IFM_Servers_Kaspersky_Update_Priority__c</fullName>
        <label>IFM Servers - Kaspersky Update Priority</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IFM_System_Access_Logs_Check_Comments__c</fullName>
        <label>IFM System Access Logs Check Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IFM_System_Access_Logs_Check_Comp_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IFM System Access Logs Check Comp By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_Checks9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IFM_System_Access_Logs_Check_Comp_Date__c</fullName>
        <label>IFM System Access Logs Check Comp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IFM_System_Access_Logs_Check_Priority__c</fullName>
        <label>IFM System Access Logs Check Priority</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IFM_System_Access_Logs_Final_RAG__c</fullName>
        <label>IFM System Access Logs Final RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IFM_System_Access_Logs_Initial_RAG__c</fullName>
        <label>IFM System Access Logs Initial RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internet_Access_Usage_Check_Comments__c</fullName>
        <label>Internet Access Usage Check Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Internet_Access_Usage_Check_Comp_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internet Access Usage Check Comp By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_Checkspx8N</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internet_Access_Usage_Check_Comp_Date__c</fullName>
        <label>Internet Access Usage Check Comp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Internet_Access_Usage_Check_Final_RAG__c</fullName>
        <label>Internet Access Usage Check Final RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internet_Access_Usage_Check_Initial_RAG__c</fullName>
        <label>Internet Access Usage Check Initial RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internet_Access_Usage_Check_Priority__c</fullName>
        <label>Internet Access Usage Check Priority</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kaspersky_Antivirus_Check_Comments__c</fullName>
        <label>Kaspersky Antivirus Check Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Kaspersky_Antivirus_Check_Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Kaspersky Antivirus Check Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_Checks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Kaspersky_Antivirus_Check_Completed_Date__c</fullName>
        <label>Kaspersky Antivirus Check Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Kaspersky_Antivirus_Check_Final_RAG__c</fullName>
        <label>Kaspersky Antivirus Check Final RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Kaspersky_Antivirus_Check_Initial_RAG__c</fullName>
        <label>Kaspersky Antivirus Check Initial RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Kaspersky_Antivirus_Check_Priority__c</fullName>
        <label>Kaspersky Antivirus Check Priority</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kaspersky_Servers_Check_Comments__c</fullName>
        <label>Kaspersky  Servers Check Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Kaspersky_Servers_Check_Comp_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Kaspersky  Servers Check Comp By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_CheckspsoY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Kaspersky_Servers_Check_Comp_Date__c</fullName>
        <label>Kaspersky  Servers Check Comp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Kaspersky_Servers_Check_Final_RAG__c</fullName>
        <label>Kaspersky Servers Check Final RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Kaspersky_Servers_Check_Initial_RAG__c</fullName>
        <label>Kaspersky Servers Check Initial RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Kaspersky_Servers_Check_Priority__c</fullName>
        <label>Kaspersky  Servers Check Priority</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Links_to_external_CAA_check_comments__c</fullName>
        <label>Links to external CAA check comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Links_to_external_CAA_check_comp_date__c</fullName>
        <label>Links to external CAA check comp date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Links_to_external_CAA_check_final_RAG__c</fullName>
        <label>Links to external CAA check final RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Links_to_external_CAA_check_initial_RAG__c</fullName>
        <label>Links to external CAA check initial RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Office_365_Access_Comments__c</fullName>
        <label>Office 365 Access Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Office_365_Access_Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Office 365 Access Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_ChecksjvjM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Office_365_Access_Completed_Date__c</fullName>
        <label>Office 365 Access Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Office_365_Access_Final_RAG__c</fullName>
        <label>Office 365 Access Final RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Office_365_Access_Initial_RAG__c</fullName>
        <label>Office 365 Access Initial RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PAC_Card_Entry_Check_Comments__c</fullName>
        <label>PAC Card Entry Check Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PAC_Card_Entry_Check_Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PAC Card Entry Check Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_CheckspxCj</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PAC_Card_Entry_Check_Completed_Date__c</fullName>
        <label>PAC Card Entry Check Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PAC_Card_Entry_Check_Final_RAG__c</fullName>
        <label>PAC Card Entry Check Final RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PAC_Card_Entry_Check_Initial_RAG__c</fullName>
        <label>PAC Card Entry Check Initial RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>